# WS24-physiological-computing

./: .gitignore  .gitmodules  README.md
HriPhysioLib/: CMakeLists.txt  README.md
HriPhysioLib/data/: .gitignore  README.md  generate_data.py  requirements.txt
HriPhysioLib/data/Scripts/: generate_data.py
HriPhysioLib/data/Scripts/Scripts/ecg_data/: ECG_data_1.csv
HriPhysioLib/include/HriPhysio/Factory/: streamerFactory.h
HriPhysioLib/include/HriPhysio/Manager/: physioManager.h
HriPhysioLib/include/HriPhysio/Processing/: biquadratic.h  butterworthBandNoch.h  butterworthBandPass.h  butterworthHighPass.h  butterworthLowPass.h  hilbertTransform.h  math.h  spectrogram.h
HriPhysioLib/include/HriPhysio/Social/: robotInterface.h
HriPhysioLib/include/HriPhysio/Stream/: csvStreamer.h  lslStreamer.h  lsl_c.h  lsl_cpp.h  streamerInterface.h
HriPhysioLib/src/: helpers.cpp
HriPhysioLib/src/Factory/: streamerFactory.cpp
HriPhysioLib/src/Manager/: physioManager.cpp  robotManager.cpp  threadManager.cpp
HriPhysioLib/src/Processing/: biquadratic.cpp  butterworthBandNoch.cpp  butterworthBandPass.cpp  butterworthHighPass.cpp  butterworthLowPass.cpp  hilbertTransform.cpp  main.cpp  spectrogram.cpp
HriPhysioLib/src/Social/: robotInterface.cpp
HriPhysioLib/src/Stream/: csvStreamer.cpp  data.csv  lslStreamer.cpp  main.cpp  rosStreamer.cpp  streamerInterface.cpp  yarpStreamer.cpp
input/: config.yaml
ros2/: README.md
ros2/hriphysio_pkg/: CMakeLists.txt  package.xml
ros2/hriphysio_pkg/src/: spectrogram_publisher.cpp
